--- a/components/floor-settings.html
+++ b/components/floor-settings.html
@@ -13,7 +13,7 @@
 
         <div layout="column">
             <div layout="row" layout-align="center center" class="">
-                <h1 class=" font-iceberg font-x-large">AGGIORNAMENTO PIANO</h1>
+                <h1 class=" font-iceberg font-x-large">TABELLA PIANO</h1>
             </div>
         </div>
     </md-toolbar>
@@ -29,20 +29,20 @@
 
                     <thead md-head md-order="query.order">
                         <tr md-row>
-                            <th md-column ><span>id</span></th>
-                            <th md-column ><span>nome</span></th>
-                            <th md-column ><span>width</span></th>
-                            <th md-column ><span>spacing</span></th>
+                            <!--<th md-column ><span>id</span></th>-->
+                            <th md-column ><span class="color-darkcyan">NOME</span></th>
+                            <th md-column ><span class="color-darkcyan">LUNGHEZZA</span></th>
+                            <th md-column ><span class="color-darkcyan">SPAZIATURA</span></th>
                         </tr>
                     </thead>
 
                     <tbody md-body>
                         <tr md-row md-select="floor" md-on-select="logItem" md-auto-select="true" ng-repeat="floor in floors | limitTo: query.limit: (query.page -1 ) * query.limit">
-                            <td md-cell>{{floor.id}}</td>
+                            <!--<td md-cell>{{floor.id}}</td>-->
                             <td md-cell ng-click="editCell($event, floor, 'name')" ng-class="{'md-placeholder': !floor.name}">{{floor.name || 'Inserire nome'}}</td>
                             <td md-cell ng-click="editCell($event, floor, 'map_width')" ng-class="{'md-placeholder': !floor.width}">{{floor.width || 'Inserire lunghezza'}}</td>
                             <td md-cell ng-click="editCell($event, floor, 'map_spacing')" ng-class="{'md-placeholder': !floor.map_spacing}">{{floor.map_spacing || 'Inserire spaziatura tacche'}}</td>
-                            <td md-cell ng-click="uploadFloorImage(floor.id)"><md-button class="color-orange"><label><input onchange="angular.element(this).scope().fileNameChanged()" type="file" class="ng-hide" id="floor-image-{{floor.id}}"></label>SELEZIONA IMMAGINE</md-button></td>
+                            <td md-cell ng-show="isAdmin" ng-click="uploadFloorImage(floor.id)"><md-button class="color-orange"><label><input onchange="angular.element(this).scope().fileNameChanged()" type="file" class="ng-hide" id="floor-image-{{floor.id}}"></label>SELEZIONA IMMAGINE</md-button></td>
                             <!--<td md-cell ><md-button ng-click="uploadFloorImage(floor.id)" class="color-orange">CARICA IMMAGINE</md-button></td>-->
                         </tr>
                     </tbody>
